--- a/main.css
+++ b/main.css
@@ -1,3 +1,14 @@
+body {
+
+}
+
+.page {  
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height:100vh;
+}
+
 .head {
     background: #fc0;
     height: 100px;
