--- a/main.css
+++ b/main.css
@@ -3,6 +3,7 @@
     height: 100px;
     position: relative;
     width: 100px;
+    border-radius: 50px;
   }
   .face {
     font-family: 'courier new', serif;
